corpus/comments.txt
================================================================================
A single line comment
================================================================================

// This is a single line comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
A multi-line comment
================================================================================

/*
   This is a multi line comment
   And this an extension to it
 */

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
A nested comment
================================================================================

/* this is a /* single */ comment */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (ERROR
    (type_identifier)))
